@@ -54,9 +54,9 @@ class UninstallationPage(Page):
             "Backup the downloaded files (ISO)")
         self.backup_iso.set_check(False)
         self.backup_iso.hide()
-        installdir = os.path.join(self.info.previous_target_dir, 'install')
-        if os.path.isdir(installdir):
-            for f in os.listdir(installdir):
+        install_dir = os.path.join(self.info.previous_target_dir, 'install')
+        if os.path.isdir(install_dir):
+            for f in os.listdir(install_dir):
                 if f.endswith('.iso'):
                     self.backup_iso.set_check(True)
                     self.backup_iso.show()
