@@ -60,5 +60,6 @@ wubi (9.04) UNRELEASED; urgency=low
   * Slight simplification of the frontend
   * Fixed ISO backup during uninstallation
   * Added finish pages
+  * Added preliminary code to generate virtual disk files, to be completed
 
- -- Agostino Russo <agostino.russo@gmail.com>  Mon, 05 Jan 2009 00:38:21 +0000
+ -- Agostino Russo <agostino.russo@gmail.com>  Mon, 05 Jan 2009 01:45:55 +0000
